Error handling and code refactor